--- a/IdentityApp/appsettings.Development.json
+++ b/IdentityApp/appsettings.Development.json
@@ -9,7 +9,7 @@
     "SQLite_Connection": "Data Source=auth.db"
   },
   "EmailSender": {
-    "Host": "smtp-relay.brevo.com",
+    "Host": "smtp-relay.brevo.com",//bilgileri bu siteden oluşturup smtp-api bölümünden buraya kopyalayabilirsin!!!
     "Port": 587,
     "EnableSSL": true,
     "Username": "",
